container-assessment/kubernates/namespace.yaml
# -------------------------------
# Namespace
# -------------------------------
apiVersion: v1
kind: Namespace
metadata:
  name: muchtodo-app
