container-assessment/kubernates/ingress.yaml
# -------------------------------
# Ingress
# -------------------------------

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name
  namespace: muchtodo-app

  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: app-ingress.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: backend
              port: 
                number: 8080
